@@ -1,6 +1,18 @@
 /***********************************************************************
  X3 ChangeLog
 
+2006-05-29  Neil Spierling  <sirvulcan@gmail.com>
+
+	* src/nickserv.c: Added user option ADVANCED, when we add more
+	advanced commands users will need to set this to see the options
+	in help. Further work in helpfile is still needed afaik. This is
+	just the basics.
+
+	* src/nickserv.h: Advanced option declerations.
+
+	* src/nickserv.help: Added option ADVANCED, also added AUTOHIDE.
+	Seems no one added that when they added the AUTOHIDE option.
+
 2006-05-28  Neil Spierling  <sirvulcan@gmail.com>
 
 	* Below functions by Wasted (Martijn Smit) <wasted@lostdomain.org>
